// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ApplicationPage header component should be rendered correctly provided app 1`] = `
<div
  className="sto-app-header"
>
  <div
    className="sto-app-header-icon"
  >
    <Icon
      className="sto-app-icon--default blurry"
      color="#95999D"
      height="88px"
      icon="test-file-stub"
      width="88px"
    />
  </div>
  <div
    className="sto-app-header-content"
  >
    <h2
      className="sto-app-header-title"
    >
      Cozy Photos
    </h2>
    <p />
    <Link
      className="c-btn c-btn--regular"
      replace={false}
      to="//myapps/photos/manage"
    >
      <Icon
        className="sto-app-icon--button"
        color="#FFFFFF"
        height="16px"
        icon="test-file-stub"
        width="16px"
      />
       
      Install on my Cozy
    </Link>
  </div>
</div>
`;

exports[`ApplicationPage header component should be rendered correctly provided app with broken icon and no editor 1`] = `
<div
  className="sto-app-header"
>
  <div
    className="sto-app-header-icon"
  >
    <Icon
      className="sto-app-icon--default blurry"
      color="#95999D"
      height="88px"
      icon="test-file-stub"
      width="88px"
    />
  </div>
  <div
    className="sto-app-header-content"
  >
    <h2
      className="sto-app-header-title"
    >
      Photos
    </h2>
    <p />
    <Link
      className="c-btn c-btn--regular"
      replace={false}
      to="//myapps/photos/manage"
    >
      <Icon
        className="sto-app-icon--button"
        color="#FFFFFF"
        height="16px"
        icon="test-file-stub"
        width="16px"
      />
       
      Install on my Cozy
    </Link>
  </div>
</div>
`;
